--- a/HapGp/HapGp.csproj
+++ b/HapGp/HapGp.csproj
@@ -13,4 +13,9 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Helper\" />
+    <Folder Include="Core\" />
+  </ItemGroup>
+
 </Project>
